fixed nav bar and aligned mostly everything on the landing page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,18 +1,22 @@
 .nav {
   position:absolute;
-  width: 150px;
+  width: 120px;
   height: 100%;
+  padding: 0px;
 }
 a {
   color: white;
 }
 
 .nav {
-  font-size: 2rem;
+  font-size: 1em;
   background-color: #282828;
 
 }
 
 .nav-link:hover {
   color: #282828;
+}
+a.nav-link:hover {
+  background-color: white;
 }
